# doorknob

./: README.md  docker-compose.yml  run_alembic.sh  test.db
backend/: .env  .gitignore  Dockerfile  alembic.ini  main.py  pyproject.toml  requirements.txt  run_alembic.sh
backend/alembic/: env.py
backend/app/: auth.py  config.py  database.py  schemas.py
backend/app/models/: post.py  user.py
backend/app/routers/: auth.py  posts.py
backend/app/tests/: conftest.py  test_auth.py  test_database.py  test_posts.py
frontend/: Dockerfile
frontend/app/: page.tsx
